src/test/ui/associated-types/cache/chrono-scan.stderr
error: compilation successful
  --> $DIR/chrono-scan.rs:29:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

